--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,10 +8,6 @@
     color: white;
 }
 
-#logo {
-    width: 40px;
-}
-
 body {
     background-image: url(/assets/img/background\ 2.jpg);
     background-repeat: no-repeat;
@@ -19,6 +15,26 @@ body {
     background-size: cover;
     background-position: center;
     justify-content: space-around;
+}
+
+nav {
+    display: flex;
+}
+
+.logo {
+    display: flex;
+    margin: 20px;
+    
+}
+
+#logo {
+    width: 75px;
+}
+
+#logo-link {
+    padding-top: 20px;
+    padding-left: 10px;
+
 }
 
 ul {
@@ -33,7 +49,7 @@ ul {
 }
 
 li {
-    margin: 10px;
+    margin: 20px;
 }
 
 header {
