--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,57 +4,78 @@
     box-sizing: border-box;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-shadow: 1px 1px 8px #000000;
-    font-size: 14px;
+    font-size: 1em;
     color: white;
 }
 
 body {
-    background-image: url(/assets/img/background\ 2.jpg);
+    background-image: url(/assets/img/background-image.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
-    justify-content: space-around;
 }
 
 nav {
     display: flex;
+    height: 15vh;
+    background-color: rgba(0, 0, 0, 0.125);
+    align-items: center;
 }
 
-.logo {
+.logo-title {
     display: flex;
-    margin: 20px;
-    
+    margin: 1.5rem;
+    align-items: center;
+    width: 10rem;
 }
 
 #logo {
-    width: 75px;
+    max-width: 100%;
+    height: 5vw;
 }
 
-#logo-link {
-    padding-top: 20px;
-    padding-left: 10px;
+.logo-title:hover {
+    background-color: rgba(123, 200, 255, 0.5);
+    box-shadow: 4px #000000;
+    border-radius: 5px;
+}
 
+nav a {
+    text-decoration: none;
 }
 
 ul {
     width: 100%;
     list-style: none;
-    top: 0;
-    left: 0;
     display: flex;
-    align-items: center;
     justify-content: right;
-    padding: 25px 100px;
+    margin-right: 3rem;
 }
 
 li {
     margin: 20px;
 }
 
+li a:hover {
+    background-color: rgba(123, 200, 255, 0.5);
+    box-shadow: 4px #000000;
+    border-radius: 5px;
+}
+
 header {
     margin-right: 100px;
 }
+
+span {
+    background-color: #fbe568;
+    color: #ffffff;
+    font-style: italic;
+    border-radius: 5px;
+    padding: 1px;
+    text-shadow:2px 2px 4px #000000;
+}
+
 
 #hero-section {
     display: flex;
@@ -87,10 +108,10 @@ button {
     border-radius:  8px;
     border-style: none;
     box-shadow: 2px 2px 4px black;
-    
 }
 
 #hero-image {
-    width: 400px;
-
+    max-width: 100%;
+    height: 75vh;
+    transform: rotateY(180deg);
 }
