--- a/pages/page1/assets/css/style.css
+++ b/pages/page1/assets/css/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    background-image: url(/assets/img/background\ 2.jpg);
+    background-image: url(/assets/img/background-image.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -24,7 +24,6 @@ nav {
 .logo {
     display: flex;
     margin: 20px;
-    
 }
 
 #logo {
@@ -69,7 +68,6 @@ header {
 p {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 24px;
-    font-
 }
 
 h1 {
