--- a/pages/page1/assets/css/style.css
+++ b/pages/page1/assets/css/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-shadow: 1px 1px 8px #000000;
-    font-size: 14px;
+    font-size: 1em;
     color: white;
 }
 
@@ -14,71 +14,102 @@ body {
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
-    justify-content: space-around;
 }
 
 nav {
     display: flex;
+    height: 15vh;
+    background-color: rgba(0, 0, 0, 0.125);
+    align-items: center;
 }
 
-.logo {
+.logo-title {
     display: flex;
-    margin: 20px;
+    margin: 1.5rem;
+    align-items: center;
+    width: 10rem;
 }
 
 #logo {
-    width: 75px;
+    max-width: 100%;
+    height: 5vw;
 }
 
-#logo-link {
-    padding-top: 20px;
-    padding-left: 10px;
+.logo-title:hover, li a:hover {
+    background-color: rgba(173, 221, 255, 0.779);
+    box-shadow: 4px #000000;
+    border-radius: 5px;
+    color: #141414;
+    text-shadow: none;
+}
 
+div p:hover {
+    text-shadow: none;
+    color: #141414;
+}
+
+nav a {
+    text-decoration: none;
 }
 
 ul {
     width: 100%;
     list-style: none;
-    top: 0;
-    left: 0;
     display: flex;
-    align-items: center;
     justify-content: right;
-    padding: 25px 100px;
+    margin-right: 3rem;
 }
 
 li {
     margin: 20px;
 }
 
+li a {
+    padding: 1rem;
+}
+
+
 header {
-    margin-right: 100px;
-    margin-left: 100px;
+    margin: 3rem 7rem 3rem 7rem;
+    justify-content: center;
+    align-items: center;
+    
 }
-
-.main {
-    margin: 25px;
-    background-color: rgba(255, 255, 255, .25);
-    padding: 10px;
-
-
-    border-radius: 5px;
-}
-
-p {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 24px;
-}
-
 h1 {
     font-size: 50px;
     margin-bottom: 30px;
 }
 
+span {
+    background-color: #fbe568;
+    color: #ffffff;
+    font-style: italic;
+    border-radius: 5px;
+    padding: 1px;
+    text-shadow:2px 2px 4px #000000;
+}
+
+.main {
+    margin: 3rem 7rem 3rem 7rem;
+}
+
+.one-and-two, .three-and-four {
+    display: flex;
+    margin-bottom: 2rem;
+
+}
+
+.container {
+    background-color: rgba(136, 136, 136, 0.25);
+    border-radius: 5px;
+    width: 50%;
+    margin-right: 2rem;
+    padding: 1rem
+}
 
 h2 {
-    color: rgb(234, 234, 86);
-    font-size: 30px;
+    color: rgb(247, 247, 130);
+    font-size: 2em;
     margin:25px;
     margin-left: 0;
 }
