--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    background-image: url(../img/background-image.jpg);
+    background-image: url(./../img/background-image.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
