--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,11 @@ li a {
     padding: 1rem;
 }
 
+#home {
+    border-bottom: solid 3px white;
+}
+
+
 #hero-section {
     display: flex;
     margin: 3rem 5rem 3rem 5rem;
@@ -92,7 +97,7 @@ header {
 }
 h1 {
     font-size: 50px;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
 }
 
 span {
