--- a/pages/page1/assets/css/style.css
+++ b/pages/page1/assets/css/style.css
@@ -43,11 +43,6 @@ nav {
     text-shadow: none;
 }
 
-div p:hover {
-    text-shadow: none;
-    color: #141414;
-}
-
 nav a {
     text-decoration: none;
 }
@@ -75,7 +70,6 @@ li a {
 header {
     margin: 3rem 7rem 3rem 7rem;
     justify-content: center;
-    align-items: center;
 }
 h1 {
     font-size: 50px;
@@ -106,21 +100,58 @@ span {
     border-radius: 5px;
     width: 50%;
     margin-right: 2rem;
-    padding: 1rem
+    padding: 1rem;
+    justify-content: center;
+    align-items: center;
 }
 
 h2 {
     color: rgb(247, 247, 130);
     font-size: 2em;
-    margin:25px;
-    margin-left: 0;
+    margin-bottom: 1rem;
 }
+
+.container p {
+    margin-bottom: 1rem;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    line-height: 1.5em;
+    text-shadow: none;
+
+}
+
+.demonstration {
+    background-color: #fbe568;
+    color: #000000;
+    text-shadow: 1px 1px 1px black;
+    border-radius: 5px;
+    width: 7rem;
+
+}
+
 button {
-    padding: 10px;
+    padding: 2px;
     font-style: italic;
     background-color: #50C4ED;
     color: white;
     border-radius:  8px;
     border-style: none;
     box-shadow: 2px 2px 4px black;
+}
+
+input {
+    color: #000000;
+    text-shadow: none;
+    width: 7rem;
+    margin-right: 1rem;
+}
+
+#loopOutput {
+    justify-content: left;
+}
+
+header p {
+    margin-bottom: 1px;
+    font-style: italic;
+    font-size: 1.5em;
+    margin-left: 10rem;
 }
