--- a/pages/page1/assets/css/style.css
+++ b/pages/page1/assets/css/style.css
@@ -111,11 +111,13 @@ h2 {
     margin-bottom: 1rem;
 }
 
+
 .container p {
     margin-bottom: 1rem;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     line-height: 1.5em;
     text-shadow: none;
+    margin-top: 1rem;
 
 }
 
@@ -174,5 +176,44 @@ header p {
     font-style: italic;
     font-size: 1.5em;
     margin-left: 10rem;
+}
+
+#conditionalOutput, #output {
+    font-style: italic;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: #75daff;
+    color: white;
+    border-radius:  8px;
+    border-style: none;
+    box-shadow: 2px 2px 4px black;
+    text-decoration: none;
+    text-shadow:2px 2px 4px #000000;
+    width: 15em;
+    font-size: 1em;
+    padding-left: 1em;
+    font-size: 1.5em;
+    height: 2rem;
+    align-items: center;
+    justify-content: center;
+}
+
+.output {
+    font-style: italic;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: #7eddff;
+    color: white;
+    border-radius:  8px;
+    border-style: none;
+    box-shadow: 2px 2px 4px black;
+    text-decoration: none;
+    text-shadow:2px 2px 4px #000000 ;
+    width: 17em;
+    font-size: 1em;
+    padding-left: 1em;
+    font-size: 1.5em;
+    margin-top: 1rem;
+    height: 2rem;
+    align-items: center;
+    justify-items: center;
 }
 
